<resources>
    <string name="app_name">ParkLet</string>
    <string name="sign_out_button">Sign-out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Parklet</string>
    <string name="nav_header_subtitle">Placeholder for user dbind</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <!--    Vehicles fragment start-->
    <string name="vehicles">"My Vehicles</string>
    <string name="vehicle_default_text">"You have not added any vehicles yet"</string>
    <string name="vehicle_show_form">Add Vehicle</string>
    <string name="vehicle_form_save">Save</string>
    <string name="vehicle_form_cancel">Cancel</string>
    <string name="vehicle_brand">Vehicle Brand</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_registration">Vehicle Registration</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="car_model">Model:</string>
    <string name="car_make">Brand:</string>
    <string name="car_reg">Reg:</string>
    <string name="car_descript">Car svg</string>
    <string name="no_vehicles">You have added no vehicles yet, please add one</string>
    <!--Vehicle fragment end-->

    <!--    Properties fragment start-->
    <string name="properties">My Properties</string>
    <string name="your_address">Property Address</string>
    <string name="address_lookup_button">Look up propertyAddress</string>
    <string name="daily_rate">Daily Rate: €</string>
    <string name="addressEntry">Address:</string>
    <string name="add_property">Add a new property</string>
    <string name="property_save_button">Save</string>
    <string name="property_save_descript">Save property</string>
    <string name="property_cancel_descript">Cancel adding property</string>
    <string name="property_cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="available_weekends">Available weekends: </string>
    <string name="default_daily_rate">5.00</string>
    <string name="house_icon_svg">house_icon_svg</string>
    <string name="house_address"> <b>Address:</b></string>
    <string name="available_to_book">Available to book: </string>
    <string name="address_required">*Property Address required*</string>
    <string name="no_property_text">You have added no properties yet. please add one</string>
    <string name="no_price">*You must provide a price*</string>
    <!--    Properties fragment end-->


    <!--    Map fragment start -->
    <string name="map_search_area">Search area</string>
    <string name="map_range">Range in Km: </string>
    <string name="map_default_range">2</string>
    <string name="map_search_button">Search</string>
    <string name="map_search_button_search_content">Search for property in an area</string>
    <string name="map_no_properties">There are no properties in this area,   try expanding your search</string>
    <string name="distance_in_km">distance in km</string>
    <string name="average_expensive">More expensive than average by %.0f%%</string>
    <string name="expensive_cheaper">Cheaper than average by %.0f%%</string>
    <!--    Map fragment end -->

    <!--    Booking fragment start-->
    <string name="confirm_booking_button">Place booking</string>
    <string name="price_per_day">Price per day: €</string>
    <string name="price_total">Price total: €</string>
    <string name="select_a_vehicle">Select a vehicle: </string>
    <string name="no_vehicle_booking">\u0020 You must add a vehicle to make a booking</string>
    <string name="confirm_booking">Confirm</string>
    <string name="cancel_booking">Cancel</string>
    <string name="summaryText">Confirm all booking details are correct?</string>
    <string name="totalDaysBooked">Days Booked: \n</string>
    <string name="total_price">Total price of booking: €%.2f </string>
    <!--Booking fragment end-->

    <!--    Home fragment start-->
    <string name="user_welcome">Welcome to ParkLet %1$s</string>
    <string name="create_a_vehicle_booking">Create a vehicle booking</string>
    <string name="no_bookings">You have no current bookings</string>
    <string name="days_booked">Days booked:</string>
    <string name="property_owner">Owner:</string>
    <string name="renter_name">Renter:</string>
    <string name="car_booked">Car booked:</string>
    <string name="vehicle_image">vehicle image</string>
    <string name="booking_status">Booking status:</string>
    <string name="current_status_of_booking">Current status of booking</string>
    <string name="status_cancelled_by_owner">Status: Cancelled by Owner</string>
    <string name="status_cancelled_by_renter">Status: Cancelled by Renter</string>
    <string name="directions_to_property">Directions to property</string>




    <!--    Home fragment end-->

    <!-- NFC Strings -->
    <string name="wrote_tag">Successfully wrote tag for:</string>
    <string name="hold_tag">Hold the tag to your phone!</string>
    <string name="nfc_write_failed">Write Failed!</string>
    <string name="empty_property_tag">Property Tag is empty!</string>
    <string name="checkin_in_progress">Checking you in now!</string>
    <string name="check_in_renter_arrived">Check-in: Renter arrived!</string>


</resources>
