<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <import type="android.view.View" />

        <variable
            name="propertyFrag"
            type="com.kinses38.parklet.view.ui.fragments.PropertiesFragment" />

        <variable
            name="formClicked"
            type="java.lang.Boolean" />

        <variable
            name="viewModel"
            type="com.kinses38.parklet.viewmodels.PropertyViewModel" />

        <variable
            name="hasProperty"
            type="java.lang.Boolean" />
    </data>


    <RelativeLayout
        android:id="@+id/property_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_properties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/property_form_toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_properties"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/add_property"
            android:onClick="@{v -> propertyFrag.onClick(v)}"
            android:text="@string/add_property"
            android:visibility="@{formClicked? View.GONE : View.VISIBLE}" />

        <!-- Start of the form. Should be visibility:GONE when form button has not been clicked       -->
        <RelativeLayout
            android:id="@+id/property_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/property_form_toggle_button"
            android:layout_marginTop="8dp"
            android:visibility="@{formClicked? View.VISIBLE : View.GONE}">

            <LinearLayout
                android:id="@+id/addressBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/address_input_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addressEntry"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/address_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="postalAddress"
                    android:hint="@string/your_address"
                    android:inputType="textPostalAddress"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/address_line_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/addressBlock"
                android:layout_centerHorizontal="true"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/dailyRateBlock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_line_one"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/dailyRateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_rate"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/dailyRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@string/default_daily_rate"
                    android:textAlignment="center" />
            </LinearLayout>

            <TextView
                android:id="@+id/dailyRateError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dailyRateBlock"
                android:layout_centerHorizontal="true"
                android:textAlignment="center" />

            <RadioGroup
                android:id="@+id/weekend_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dailyRateError"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/weekend_radio_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available_weekends" />

                <RadioButton
                    android:id="@+id/weekend_radio_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/weekend_radio_false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>

            <!--            form controls-->
            <Button
                android:id="@+id/property_form_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weekend_radio_group"
                android:layout_centerHorizontal="true"
                android:layout_toLeftOf="@+id/center_block"
                android:contentDescription="@string/property_save_descript"
                android:onClick="@{(v) -> propertyFrag.onClick(v)}"
                android:text="@string/property_save_button" />

            <TextView
                android:id="@+id/center_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weekend_radio_group"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/property_form_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weekend_radio_group"
                android:layout_toRightOf="@+id/center_block"
                android:contentDescription="@string/property_cancel_descript"
                android:onClick="@{(v) -> propertyFrag.onClick(v)}"
                android:text="@string/property_cancel" />

        </RelativeLayout>
        <!--        End of form-->

        <TextView
            android:id="@+id/no_property_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/property_form"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/no_property_text"
            android:visibility="@{hasProperty? View.GONE : View.VISIBLE}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/property_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/property_form"
            android:layout_marginTop="8dp"
            android:scrollbars="vertical"
            android:visibility="@{hasProperty? View.VISIBLE : View.GONE}"
            app:layout_constraintVertical_bias="0.0" />

    </RelativeLayout>
</layout>