<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/booking_house_svg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/house_icon_svg"
                android:paddingRight="18dp"
                app:srcCompat="@drawable/ic_home_black_24dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/rv_house_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/booking_house_svg"
                android:layout_toRightOf="@id/booking_house_svg"
                android:paddingTop="8dp"
                android:text="@string/house_address"
                android:textStyle="bold"
                app:autoSizeMinTextSize="14sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/rv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_house_address"
                android:layout_toRightOf="@id/booking_house_svg"
                android:text="@string/daily_rate"
                app:autoSizeMinTextSize="14sp"
                app:autoSizeTextType="uniform"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/booking_dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rv_total_price"
                android:layout_toRightOf="@id/booking_house_svg"
                android:text="@string/available_to_book"
                app:autoSizeMinTextSize="14sp"
                app:autoSizeTextType="uniform"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/rv_owner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/booking_dates"
                android:layout_toRightOf="@id/booking_house_svg"
                android:text="@string/available_weekends"
                app:autoSizeMinTextSize="14sp"
                app:autoSizeTextType="uniform"
                tools:ignore="RtlHardcoded" />

            <ImageButton
                android:id="@+id/rv_map_booking_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/booking_dates"
                android:layout_alignParentRight="true"
                android:background="#0000"
                app:srcCompat="@drawable/booking_forward_arrow_36dp" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>